# pixelImage

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/: manifest.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: compress.rs  convert.rs  history.rs  icons.rs  mod.rs  preview.rs  scraper.rs  settings.rs  temp.rs  upload.rs  uploads.rs  zip.rs
src-tauri/src/models/: image_data.rs  mod.rs
src-tauri/src/services/: backup_service.rs  file_manager.rs  icon_generator.rs  image_processor.rs  mod.rs  settings_service.rs  temp_file_service.rs  upload_service.rs
src-tauri/src/storage/: db.rs  history_store.rs  mod.rs  path_resolver.rs
src/components/: ImagePreviewModal.tsx  SelectedImagesAlert.tsx
src/components/layout/: Layout.tsx  ThemeProvider.tsx  ThemeToggle.tsx  index.ts
src/components/ui/: dialog.tsx  tooltip.tsx
src/context/: ImageContext.tsx  index.ts
src/hooks/: index.ts  useImageProcessing.ts
src/lib/: file-dialog.ts  icons-api.ts  saving.ts  settings-api.ts  tauri-api.ts  uploads-api.ts  utils.ts
src/pages/: Analytics.tsx  BatchProcessor.tsx  Dashboard.tsx  History.tsx  Settings.tsx  Tools.tsx  ToolsPage.tsx  Upload.tsx  index.ts
src/pages/tools/: FormatConverter.tsx  ImageCompressor.tsx  ImageResizer.tsx  ImageScraper.tsx  SmartScaler.tsx  WebIconsGenerator.tsx
